# netchecks

./: .dockerignore  .gitignore  .typos.toml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  create-static-manifests.sh  example-config.json  index.yaml  main.py  my-claim.yaml  networkassertion-crd.yaml  pyproject.toml
.github/: chart-values-override.yaml  dependabot.yml  kind-config.yaml
.github/workflows/: ci.yaml  ci.yml  cli.yaml  docker-image.yaml  helm-chart-release.yaml  helm-chart.yaml  kind.yaml  lint.yaml  operator.yaml
.github/workflows/manifests/: should-pass.yaml
.run/: Netchecks Operator.run.xml
charts/netchecks/: Chart.yaml  values.yaml
charts/netchecks/crds/: networkassertions.yaml
charts/netchecks/templates/: NOTES.txt  clusterrole.yaml  netpol.yaml  networkassertion-crd.yaml
doc/: cloud-native-network-assertions.md
docs/: README.md  next.config.js  package.json
docs/grafana/: README.md  netchecks-dashboard.json
docs/grafana/alerts/: README.md  netchecks-alerts.yaml
docs/markdoc/: nodes.js  tags.js
docs/public/: browserconfig.xml
docs/src/components/: ArchitectureDiagram.jsx  Button.jsx  Callout.jsx  Features.jsx  Fence.jsx  Footer.jsx  Hero.jsx  Layout.jsx  Logo.jsx  MarketingHero.jsx  Pricing.jsx
docs/src/pages/: _app.jsx  index.jsx  index.md
docs/src/pages/docs/: alerting.md  architecture-guide.md  compliance-annotations.md  compliance-reporting.md  compliance.md  continuous-assurance.md  core-concepts.md  custom-validation-rules.md  development.md  dns.md  external-data.md  getting-started.md  how-to-contribute.md  http.md  installation.md  k8s_data.md  postgres.md  releasing.md  roadmap.md  tcp.md  testing.md  writing-network-assertions.md
examples/: k8s-version.yaml
examples/cilium-cluster-wide-dns-restrictions/: cluster-dns-should-work.yaml  dns-restrictions-assertion.yaml
examples/cilium-dns-restrictions/: README.md  cluster-dns-should-work.yaml  dns-assertion.yaml  dns-netpol.yaml  dns-restrictions-assertion.yaml
examples/default-k8s/: dns.yaml  http.yaml
examples/httpbin/: http.yaml
examples/kind-installation/: values.yaml
manifests/: deploy.yaml
manifests/crds/: networkassertion-crd.yaml
manifests/operator/: deployment.yaml  netpol.yaml  rbac.yaml
netcheck/: cli.py  context.py  dns.py  http.py  runner.py  validation.py  version.py
netcheck/checks/: __init__.py  dns.py  http.py  internal.py  postgres.py  tcp.py
netchecks-api/: Cargo.toml
netchecks-api/src/: main.rs  network_assertion_rule.rs
operator/: .dockerignore  Cargo.toml  Dockerfile  README.md  create-static-manifests.sh  pyproject.toml
operator/charts/netchecks/: Chart.yaml  README.md  artifacthub-repo.yml  values.yaml
operator/charts/netchecks/crds/: clusterpolicyreports.yaml  networkassertions.yaml  policyreports.yaml
operator/charts/netchecks/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
operator/doc/: cloud-native-network-assertions.md
operator/examples/: k8s-version.yaml  postgres-grants.yaml  value-in-configmap.yaml
operator/examples/cilium-cluster-wide-dns-restrictions/: README.md  cluster-dns-should-work.yaml  default-dns-netpol.yaml  dns-restrictions-assertion.yaml  kube-dns-netpol.yaml
operator/examples/cilium-dns-restrictions/: README.md  cluster-dns-should-work.yaml  dns-netpol.yaml  dns-restrictions-assertion.yaml
operator/examples/cilium-tcp-egress-restrictions/: tcp-egress-assertion.yaml  tcp-egress-netpol.yaml
operator/examples/compliance/: cis-default-deny.yaml  pci-dss-cde-isolation.yaml  soc2-boundary-protection.yaml
operator/examples/default-k8s/: http.yaml  tcp.yaml
operator/examples/httpbin/: httpbin.yaml
operator/examples/kind-installation/: config.json  values.yaml
operator/examples/meta/: assert-policyreports-api.yaml
operator/examples/observability/: README.md  otel-collector.yaml  servicemonitor.yaml
operator/examples/policy-reporter/: README.md  prometheus-values.yaml
operator/examples/validation/: dns.yaml  http-configmap.yaml  http.yaml
operator/manifests/: deploy.yaml
operator/netchecks_operator/: config.py  main.py
operator/src/: context.rs  crd.rs  lib.rs  main.rs  observability.rs  reconciler.rs
operator/tests/: conftest.py  test_config.py  test_dns_cilium_controls.py  test_dns_default_cluster.py  test_external_configmap_data_default_cluster.py  test_external_secret_data_default_cluster.py  test_http_default_cluster.py  test_inline_context_data_default_cluster.py  test_internal_check_of_configmap_data_default_cluster.py  test_operator.py  test_postgres_default_cluster.py  test_tcp_cilium_controls.py  test_tcp_default_cluster.py  test_verbose_context_data_default_cluster.py
operator/tests/testdata/: cluster-dns.yaml  delayed-http.yaml  http-job.yaml  internal-config-map-check.yaml  postgres-db.yaml  postgres-grants.yaml  should-fail.yaml  some-config-map-bar.yaml  some-config-map-foo.yaml  tcp-job.yaml  with-configmap-data.yaml  with-configmap-json-yaml-data.yaml  with-context-data.yaml  with-secret-data.yaml  with-service-account.yaml  with-verbose-context.yaml
scripts/: check_versions.py
src/components/: Hero.jsx  Layout.jsx  Logo.jsx
src/pages/: index.md
src/pages/docs/: design-principles.md  development.md  installation.md  roadmap.md  testing.md  writing-plugins.md
tests/: conftest.py  test_cli.py  test_context.py  test_postgres.py  test_validation.py
tests/testdata/: config-with-context.json  config-with-multiple-rules.json  data.json  dns-config-custom-validation.json  dns-config.json  http-with-headers.json  internal-check-config.json  invalid-config-unknown-check.json  simple-config-with-expected-failures.json  simple-config-with-unexpected-failures.json  simple-config.json  tcp-config.json
tests/testdata/dir-of-data/: API_TOKEN
