[package]
name = "netchecks-rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets"] }
anyhow = "1.0.44"
kube = { version = "0.86.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20.0", features = ["latest"] }
tokio = { version = "1.14.0", features = ["full"] }
#tokio-stream = { version = "0.1.9", features = ["net"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.19"
schemars = "0.8.6"
garde = { version = "0.15.0", default-features = false, features = ["derive"] }