[tool.poetry]
name = "netcheck-operator"
version = "0.5.1"
description = "Netcheck is a cloud native tool for specifying and regularly checking assertions about network conditions. Organisations use netcheck to proactively verify whether security controls are working as intended, alerting them to misconfiguration and potential threats."
authors = ["Brian Thorne <brian@hardbyte.nz>"]
readme = "README.md"
packages = [{include = "netchecks_operator"}]


[tool.poetry.dependencies]
python = "^3.11"
kopf = "^1.37.1"
kubernetes = "^29.0"
rich = "^13.3"
structlog = "^23.1.0"
prometheus-client = "^0.16.0"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
ruff = "^0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
