[tool.poetry]
name = "netcheck-operator"
version = "0.5.4"
description = "Netcheck is a cloud native tool for specifying and regularly checking assertions about network conditions. Organisations use netcheck to proactively verify whether security controls are working as intended, alerting them to misconfiguration and potential threats."
authors = ["Brian Thorne <brian@hardbyte.nz>"]
readme = "README.md"
packages = [{include = "netchecks_operator"}]


[tool.poetry.dependencies]
python = "^3.11"
kopf = "^1.37.1"
kubernetes = "^30.1"
rich = "^13.8"
structlog = "^24.4.0"
prometheus-client = "^0.20.0"
pydantic = "^2.9.1"
opentelemetry-sdk = "^1.24.0"
opentelemetry-exporter-otlp = "^1.24.0"
opentelemetry-exporter-prometheus = "^0.46b0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
