[tool.poetry]
name = "netcheck-operator"
version = "0.5.6"
description = "Netcheck is a cloud native tool for specifying and regularly checking assertions about network conditions. Organisations use netcheck to proactively verify whether security controls are working as intended, alerting them to misconfiguration and potential threats."
authors = ["Brian Thorne <brian@hardbyte.nz>"]
readme = "README.md"
packages = [{include = "netchecks_operator"}]


[tool.poetry.dependencies]
python = "^3.11"
kopf = "^1.38.0"
kubernetes = "^34.0"
rich = "^14.0"
structlog = "^25.4.0"
prometheus-client = "^0.23.1"
pydantic = "^2.0"
pydantic-settings = "^2.0"
opentelemetry-sdk = "^1.37.0"
opentelemetry-exporter-otlp = "^1.37.0"
opentelemetry-exporter-prometheus = "^0.58b0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
ruff = "^0.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
